[package]
name = "rust-kronosnet"
version = "0.1.0"
authors = ["Christine Caulfield <ccaulfie@redhat.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chrissie-c/rust-kronosnet"
description = "Rust bindings for Kronosnet libraries"
categories = ["api-bindings"]
keywords = ["cluster", "high-availability"]

[dependencies]
bitflags = "1.2.1"
lazy_static = "1.4.0"
os_socketaddr = "0.2.0"
libc = "0.2.93"

[build-dependencies]
pkg-config = "0.3"

