[package]
name = "rust-kronosnet-tests"
version = "0.1.0"
authors = ["Christine Caulfield <ccaulfie@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kronosnet = { path = ".." }

[[bin]]
name = "knet-test"
test = true
bench = false


